--- a/images.html
+++ b/images.html
@@ -37,7 +37,7 @@
                 <p class="image-info">Original Image (JPEG, 1,3MB, 5456 x 3637)</p>
            </div> 
            <div>
-                <img src="digital-image1" alt="mockup1">
+                <img src="digital-image1.jpg" alt="mockup1">
                 <p class="image-info">Edited Image (JPEG, 74KB, 2000 x 950)</p>
            </div>
             
@@ -81,7 +81,7 @@
                     <p class="image-info">Original Image (JPEG, 1,2MB, 3648 x 5472)</p>
                </div> 
                <div>
-                    <img src="digital-image3" alt="mockup1">
+                    <img src="digital-image3.jpg" alt="mockup1">
                     <p class="image-info">Edited Image (JPEG, 475KB, 3648 x 5472)</p>
                </div>
             </div>
