--- a/images.html
+++ b/images.html
@@ -77,7 +77,7 @@
         <h3>3. Website Picture</h3>
         <div class="comparison-images2">
                <div>
-                    <img src="original3.JPG" alt="mockup1">
+                    <img src="original3.jpg" alt="mockup1">
                     <p class="image-info">Original Image (JPEG, 1,2MB, 3648 x 5472)</p>
                </div> 
                <div>
